--- a/Desenvolvimento_web/index.html
+++ b/Desenvolvimento_web/index.html
@@ -8,15 +8,17 @@
     </head>
     <body>
         <header>
-            <div>Logo</div>
-            <div class="">
-                <ul>
-                    <li>
-                        <a href="Skills"></a>
-                        <a href="Sobre"></a>
-                        <a href="Mais"></a>
-                    </li>
-                </ul>
+            <div class="container">
+                <div>Logo</div>
+                <div class="">
+                    <ul>
+                        <li>
+                            <a href="Skills"></a>
+                            <a href="Sobre"></a>
+                            <a href="Mais"></a>
+                        </li>
+                    </ul>
+                </div>
             </div>
         </header>
 
